e-mail notification service implemented plus templates are creted