@@ -1,70 +1,120 @@
 package org.ubb.ticketing.service.notification;
 
+import io.github.cdimascio.dotenv.Dotenv;
 import jakarta.mail.MessagingException;
 import jakarta.mail.internet.MimeMessage;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.mail.javamail.JavaMailSender;
 import org.springframework.mail.javamail.MimeMessageHelper;
+import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 import org.ubb.ticketing.domain.Ticket;
+import org.ubb.ticketing.exception.NotificationException;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.Map;
 
 @Service
-public class EmailNotificationService implements NotificationService{
+public class EmailNotificationService implements NotificationService {
 
     private final JavaMailSender javaMailSender;
+    private Dotenv dotenv;
+    private final String EMAIL_FROM = dotenv.get("EMAIL_FROM");
+    private Logger logger = LoggerFactory.getLogger(EmailNotificationService.class);
 
     public EmailNotificationService(JavaMailSender javaMailSender) {
         this.javaMailSender = javaMailSender;
+        this.dotenv = dotenv = Dotenv.load();
     }
 
+    @Async
     @Override
-    public void notifyTicketCreated(String destination, String subject, String text, Ticket ticket) {
+    public void notifyTicketCreated(Ticket ticket) {
+        logger.debug("notifyTicketCreated method accessed");
         Map<String, String> placeholders = new HashMap<>();
-        placeholders.put("date", ticket.getTimeSlot().getTimeInterval().getDate().toString());
-        placeholders.put("time", ticket.getTimeSlot().getTimeInterval().getStartTime().toString());
-        placeholders.put("text", text);
+        placeholders.put("date-time", ticket.getCreatedWhen().toString());
+        placeholders.put("text", "Ticket created with id: " + ticket.getTicketId());
 
         try {
-            String body = loadEmailTemplate(TemplateTYPE.RESERVATION_CREATED.getPath() /*"src/main/resources/templates/rezervation_created.html"*/, placeholders);
+            String body = loadEmailTemplate("src/main/resources/email-templates/ticket-created.html", placeholders);
             MimeMessage message = javaMailSender.createMimeMessage();
-
             MimeMessageHelper helper = new MimeMessageHelper(message, true);
 
-            message.setFrom("bbcwasher@gmail.com");
-            helper.setTo(destination);
-            helper.setSubject(subject);
+            message.setFrom(EMAIL_FROM);
+            helper.setTo("csiszer_rs@yahoo.com"); //TODO: to the customer
+            helper.setSubject("New ticket created");
             helper.setText(body, true);
-
             javaMailSender.send(message);
-        } catch (IOException ioException) {
-            ioException.printStackTrace();
-        } catch (MessagingException e) {
-            throw new RuntimeException(e);
+        } catch (IOException | MessagingException e) {
+            logger.error("notifyTicketCreated internal error", e);
+            throw new NotificationException(e);
         }
-
 
     }
 
     @Override
-    public void notifyTicketAssigned(String destination, String subject, String text, Ticket ticket) {
+    public void notifyTicketAssigned(Ticket ticket) {
+        logger.debug("notifyTicketAssigned method accessed");
+        Map<String, String> placeholders = new HashMap<>();
+        placeholders.put("agent-name", ticket.getAssignedTo().get().getFirstName());
+        placeholders.put("ticket-id", ticket.getTicketId().toString());
+        placeholders.put("date-time", ticket.getCreatedWhen().toString());
+        placeholders.put("ticket-summary", ticket.getDescription());
+
+
+        try {
+            String body = loadEmailTemplate("src/main/resources/email-templates/ticket-assigned.html", placeholders);
+            MimeMessage message = javaMailSender.createMimeMessage();
+            MimeMessageHelper helper = new MimeMessageHelper(message, true);
+
+            message.setFrom(EMAIL_FROM);
+            helper.setTo(ticket.getAssignedTo().get().getEmail());
+            helper.setSubject("Ticket assigned to you");
+            helper.setText(body, true);
+            javaMailSender.send(message);
+        } catch (IOException | MessagingException e) {
+            logger.error("notifyTicketCreated internal error", e);
+            throw new NotificationException(e);
+        }
+
+    }
+
+    @Override
+    public void notifyTicketClosed(Ticket ticket) {
+        logger.debug("notifyTicketClosed method accessed");
+        Map<String, String> placeholders = new HashMap<>();
+        //placeholders.put("customer-name", ticket.getCustomer().getName()); //TODO: get cutomer's name
+        placeholders.put("ticket-id", ticket.getTicketId().toString());
+        placeholders.put("date-time", ticket.getClosedWhen().toString());
+        placeholders.put("resolution", ticket.getSolutionDescription());
+
+
+        try {
+            String body = loadEmailTemplate("src/main/resources/email-templates/ticket-closed.html", placeholders);
+            MimeMessage message = javaMailSender.createMimeMessage();
+            MimeMessageHelper helper = new MimeMessageHelper(message, true);
+
+            message.setFrom(EMAIL_FROM);
+            helper.setTo(""); //TODO: to the customer
+            helper.setSubject("Ticket assigned to you");
+            helper.setText(body, true);
+            javaMailSender.send(message);
+        } catch (IOException | MessagingException e) {
+            logger.error("notifyTicketCreated internal error", e);
+            throw new NotificationException(e);
+        }
 
     }
 
     private String loadEmailTemplate(String path, Map<String, String> placeholders) throws IOException {
-        String template = new String(
-                Files.readAllBytes(Paths.get(path)), StandardCharsets.UTF_8
-        );
-
+        String template = Files.readString(Paths.get(path));
         for (Map.Entry<String, String> entry : placeholders.entrySet()) {
             template = template.replace("{{" + entry.getKey() + "}}", entry.getValue());
         }
-
         return template;
     }
 
